[package]
name = "websocket-cancellation"
version = "0.1.0"
authors = []
edition = "2018"

[dependencies]
anyhow = "1"
futures = "0.3.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"], default-features = false }
tokio-stream = { version = "0.1", features = ["net"] }
tokio-tungstenite = "0.14"
